Write content up to conditionals

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </div>
 
-    <script src="//toolness.github.io/p5.js-widget/p5-widget.js"></script>
+    <script src="static/p5.js-widget/p5-widget.js"></script>
     <script src="main.bundle.js"></script>
   </body>
 </html>
